@@ -1239,7 +1239,10 @@ initialize_argument_information (num_actuals, args, args_size, n_named_args,
 					   args[i].tree_value);
 	      type = build_pointer_type (type);
 	    }
-	  else if (TREE_CODE (args[i].tree_value) == TARGET_EXPR)
+	  else if (TREE_CODE (args[i].tree_value) == TARGET_EXPR
+		   || (TREE_CODE (args[i].tree_value) == NOP_EXPR
+		       && (TREE_CODE (TREE_OPERAND (args[i].tree_value, 0))
+			   == TARGET_EXPR)))
 	    {
 	      /* In the V3 C++ ABI, parameters are destroyed in the caller.
 		 We implement this by passing the address of the temporary
