@@ -1,3 +1,8 @@
+2004-12-01  Alexandre Oliva  <aoliva@redhat.com>
+
+	* calls.c (initialize_argument_information): Treat NOP_EXPR
+	of TARGET_EXPR the same as TARGET_EXPR itself.
+
 2002-08-14  Gabriel Dos Reis  <gdr@nerim.net>
 
 	Fix PR/7566
